--- a/public/styles/shared/forms.styl
+++ b/public/styles/shared/forms.styl
@@ -4,9 +4,9 @@ button()
 	border-style solid
 	border-width 15px
 	border-image url("/assets/shared/border-05.png") 71 69 69 72 fill stretch
+	box-sizing border-box
 	color #333
 	text-decoration none
-	margin 0.75em 0 0 0
 	float left
 	&:hover
 		button_hover()
@@ -22,9 +22,9 @@ textbox()
 	border-style solid
 	border-width 10px
 	border-image url("/assets/shared/border-04.png") 71 69 69 72 fill stretch
+	box-sizing border-box
 	color #666666
 	text-decoration none
-	margin 0.75em 0 0 0
 	&:hover
 		textbox_hover()
 
