--- a/public/styles/shared/menu_layouts.styl
+++ b/public/styles/shared/menu_layouts.styl
@@ -1,11 +1,16 @@
 // Menu Layouts
 
 horiz_nav()
+	margin 0
+	padding 0
+	height 100%
 	list-style none
 	li 
-		float left	
+		display inline-block
+		
 
 vert_nav()
+	padding 0
 	float left
 	height 100%
 	list-style none
@@ -14,6 +19,7 @@ vert_nav()
 		clear both
 
 thumb_nav()
+	padding 0
 	margin 10px 20px
 	float left
 	list-style none
