--- a/public/styles/shared/panels.styl
+++ b/public/styles/shared/panels.styl
@@ -24,11 +24,10 @@ feed_content_panel()
 	border-width 22px
 	border-image url("/assets/shared/border-08.png") 80 77 fill round
 	box-sizing border-box
-	h3
-		margin 0 0 0.825em 0
-		a
-			text-decoration none
-			color #AAAAAA
+	margin-bottom 2.5%
+	h3 a
+		text-decoration none
+		color #AAAAAA
 	.thumb
 		max-width 30%
 		img
