--- a/public/styles/website/home.css
+++ b/public/styles/website/home.css
@@ -453,6 +453,146 @@ header h6 ~ p {
 /*
 	Import dependencies
 */
+@font-face {
+  font-family: 'Franchise';
+  font-style: normal;
+  font-weight: normal;
+  src: url("/assets/shared/font/francise.eot");
+  src: url("franchise-bold-hinted-webfont.eot?#iefix") format('embedded-opentype'), url("franchise-bold-hinted-webfont.woff") format('woff'), url("franchise-bold-hinted-webfont.ttf") format('truetype'), url("franchise-bold-hinted-webfont.svg#franchiseregular") format('svg');
+}
+h1 {
+  margin: 0;
+  float: left;
+}
+h1,
+h2 {
+  letter-spacing: 0.025em;
+}
+h3,
+h4,
+h5,
+h6 {
+  letter-spacing: 0.01em;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Franchise';
+}
+#bg {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  z-index: -1;
+/* Ensure div tag stays behind content -999 might work, too. */
+}
+.stretch {
+  width: 100%;
+  height: 100%;
+}
+#page_header .login {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  list-style: none;
+  float: right;
+  color: #999;
+  border-style: solid;
+  border-width: 28px;
+  border-image: url("/assets/shared/border-02.png") 42 41 42 42 fill round;
+  box-sizing: border-box;
+}
+#page_header .login li {
+  display: inline-block;
+}
+#page_header .login li {
+  margin: -10px auto;
+}
+#page_header .login input[type='text'] {
+  background: transparent none;
+  border-style: solid;
+  border-width: 10px;
+  border-image: url("/assets/shared/border-04.png") 71 69 69 72 fill stretch;
+  box-sizing: border-box;
+  color: #666;
+  text-decoration: none;
+  float: right;
+}
+#page_header .login input[type='text']:hover {
+  color: #999;
+  border-image: url("/assets/shared/border-08.png") 71 69 69 72 fill stretch;
+  transition: all 0.25s ease;
+  box-sizing: border-box;
+}
+#page_header .login input[type='checkbox'],
+#page_header .login label[for='chk_remember'] {
+  float: left;
+}
+#page_header .login input[type='checkbox'] {
+  margin-left: 15px;
+  clear: left;
+}
+#page_header .login label[for='chk_remember'] {
+  clear: right;
+}
+#page_header .login a {
+  border-style: solid;
+  border-width: 15px;
+  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
+  box-sizing: border-box;
+  color: #333;
+  text-decoration: none;
+  float: left;
+}
+#page_header .login a:hover {
+  color: #999;
+  border-width: 15px;
+  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
+  transition: all 0.25s ease;
+}
+#page_section #page_nav ul.vert_nav {
+  padding: 0;
+  float: left;
+  height: 100%;
+  list-style: none;
+  overflow: visible;
+  border-style: solid;
+  border-width: 45px;
+  border-image: url("/assets/shared/border-01.png") 81 fill round;
+  box-sizing: border-box;
+}
+#page_section #page_nav ul.vert_nav li {
+  float: left;
+  clear: both;
+}
+#page_section #page_nav ul.vert_nav li {
+  width: 100%;
+}
+#page_section #page_nav ul.vert_nav li a {
+  border-style: solid;
+  border-width: 15px;
+  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
+  box-sizing: border-box;
+  color: #333;
+  text-decoration: none;
+  float: left;
+  width: 100%;
+  font-family: 'Franchise';
+  font-size: 1.85em;
+  text-transform: uppercase;
+  text-align: center;
+}
+#page_section #page_nav ul.vert_nav li a:hover {
+  color: #999;
+  border-width: 15px;
+  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
+  transition: all 0.25s ease;
+}
 body {
   font-size: 75%;
 }
@@ -476,7 +616,7 @@ body {
   width: 100%;
   margin-left: 0%;
   margin-right: 3%;
-  padding: 0 1.5%;
+  padding: 1.5% 1.5%;
 }
 #page_header:last-child {
   margin-right: 0%;
@@ -644,122 +784,6 @@ body {
 /*
 	Page styles
 */
-h1 {
-  margin: 0;
-  float: left;
-}
-#bg {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  left: 0px;
-  top: 0px;
-  z-index: -1;
-/* Ensure div tag stays behind content -999 might work, too. */
-}
-.stretch {
-  width: 100%;
-  height: 100%;
-}
-#page_header .login {
-  list-style: none;
-  float: right;
-  color: #999;
-  border-style: solid;
-  border-width: 28px;
-  border-image: url("/assets/shared/border-02.png") 42 41 42 42 fill round;
-  box-sizing: border-box;
-}
-#page_header .login li {
-  float: left;
-}
-#page_header .login li {
-  margin: -10px auto;
-}
-#page_header .login input[type='text'] {
-  background: transparent none;
-  border-style: solid;
-  border-width: 10px;
-  border-image: url("/assets/shared/border-04.png") 71 69 69 72 fill stretch;
-  color: #666;
-  text-decoration: none;
-  margin: 0.75em 0 0 0;
-  float: right;
-}
-#page_header .login input[type='text']:hover {
-  color: #999;
-  border-image: url("/assets/shared/border-08.png") 71 69 69 72 fill stretch;
-  transition: all 0.25s ease;
-  box-sizing: border-box;
-}
-#page_header .login input[type='checkbox'],
-#page_header .login label[for='chk_remember'] {
-  float: left;
-}
-#page_header .login input[type='checkbox'] {
-  margin-left: 15px;
-  clear: left;
-}
-#page_header .login label[for='chk_remember'] {
-  clear: right;
-}
-#page_header .login a {
-  border-style: solid;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
-  color: #333;
-  text-decoration: none;
-  margin: 0.75em 0 0 0;
-  float: left;
-}
-#page_header .login a:hover {
-  color: #999;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
-  transition: all 0.25s ease;
-}
-#page_section #page_nav ul.vert_nav {
-  float: left;
-  height: 100%;
-  list-style: none;
-  overflow: visible;
-  border-style: solid;
-  border-width: 45px;
-  border-image: url("/assets/shared/border-01.png") 81 fill round;
-  transition-delay: 0s;
-  transition-duration: 0.5s;
-  transition-property: all;
-  transition-timing-function: ease;
-  box-sizing: border-box;
-  overflow: visible;
-}
-#page_section #page_nav ul.vert_nav li {
-  float: left;
-  clear: both;
-}
-#page_section #page_nav ul.vert_nav li {
-  margin: 0 0 0 -10px;
-  width: 100%;
-}
-#page_section #page_nav ul.vert_nav li a {
-  border-style: solid;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
-  color: #333;
-  text-decoration: none;
-  margin: 0.75em 0 0 0;
-  float: left;
-  width: 100%;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-align: center;
-}
-#page_section #page_nav ul.vert_nav li a:hover {
-  color: #999;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
-  transition: all 0.25s ease;
-}
 #page_section #page_content header {
   border-width: 28px;
   border-image: url("/assets/shared/border-03.png") 80 77 fill round;
@@ -780,12 +804,16 @@ h1 {
   margin-right: 15px;
 }
 #page_section #page_content section ul.horiz_nav {
+  margin: 0;
+  padding: 0;
+  height: 100%;
   list-style: none;
 }
 #page_section #page_content section ul.horiz_nav li {
-  float: left;
+  display: inline-block;
 }
 #page_section #page_content footer ul.thumb_nav {
+  padding: 0;
   margin: 10px 20px;
   float: left;
   list-style: none;
@@ -813,9 +841,7 @@ h1 {
   border-width: 22px;
   border-image: url("/assets/shared/border-08.png") 80 77 fill round;
   box-sizing: border-box;
-}
-#page_section #page_sidebar article h3 {
-  margin: 0 0 0.825em 0;
+  margin-bottom: 2.5%;
 }
 #page_section #page_sidebar article h3 a {
   text-decoration: none;
