--- a/public/styles/website/layouts/content.styl
+++ b/public/styles/website/layouts/content.styl
@@ -16,7 +16,7 @@ body
 #page_section #page_sidebar 
 	col(4/12)
 
-@media screen and (max-width: 1140px)
+@media mTablet
 	body
 		font-size 85%
 	#wrapper {
@@ -33,7 +33,7 @@ body
 		col(1)
 	}
 
-@media screen and (max-width: 768px)
+@media mPhone
 	body
 		font-size 95%
 	#wrapper {
