--- a/public/styles/website/home.styl
+++ b/public/styles/website/home.styl
@@ -15,45 +15,6 @@
 	Page styles
 */
 
-defaults()
-
-#page_header .login
-	horiz_nav()
-	float right
-	color #999999
-	border-style solid
-	border-width 28px
-	border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
-	box-sizing border-box
-	li
-		margin -10px auto
-	input[type='text']
-		textbox()
-		float right
-	input[type='checkbox'], label[for='chk_remember']
-		float left
-	input[type='checkbox']
-		margin-left 15px
-		clear left
-	label[for='chk_remember']
-		clear right
-	a
-		button()
-
-#page_section #page_nav ul.vert_nav
-	vert_nav()
-	main_menu()
-	overflow visible
-	li 
-		margin 0 0 0 -10px
-		width 100%
-	li a			
-		button()
-		width 100%
-		font-weight bold
-		text-transform uppercase
-		text-align center
-
 
 #page_section #page_content header
 	featured_content_panel()
@@ -77,14 +38,12 @@ defaults()
 	Layout Responsiveness
 */
 
-@media screen and (max-width: 1140px)
+@media mTablet
 	#page_section #page_sidebar .thumb {
 		width: 20%;
 	}
 
-
-
-@media screen and (max-width: 768px)
+@media mPhone
 	#page_section #page_sidebar .thumb {
 		width: 40%;
 	}
