--- a/public/styles/website/layouts/homepage.styl
+++ b/public/styles/website/layouts/homepage.styl
@@ -1,3 +1,5 @@
+@import "./defaults.styl"
+
 body
 	font-size 75%
 
@@ -6,7 +8,7 @@ body
 
 #page_header 
 	col(1)
-	padding 0 1.5%
+	padding 1.5% 1.5%
 
 #page_section
 	padding 0 1.5%
