Due to a really weird quirk with Stylus' dir looping, the stylus files are subdir'd to /views

--- a/views/header.jade
+++ b/views/header.jade
@@ -1,6 +1,6 @@
 title= title
 case page_template
 	when "website/home"
-		include website/home/header
+		link(rel='Stylesheet', href='/styles/website/home.css')
 	when "website/about"
-		include website/about/header
+		link(rel='Stylesheet', href='/styles/website/about.css')
