--- a/views/styles/shared/forms.styl
+++ b/views/styles/shared/forms.styl
@@ -1,8 +1,10 @@
 // Form layout and control styles
 
 button()
+	font-family 'Franchise'
+	font-size 1.25em
 	border-style solid
-	border-width 15px
+	border-width 10px
 	border-image url("/assets/shared/border-05.png") 71 69 69 72 fill stretch
 	box-sizing border-box
 	color #333
@@ -13,11 +15,12 @@ button()
 
 button_hover()
 	color #999999
-	border-width 15px
+	border-width 10px
 	border-image url("/assets/shared/border-07.png") 71 69 69 72 fill stretch
 	transition all 0.25s ease
 
 textbox()
+	margin 5px 0
 	background transparent none
 	border-style solid
 	border-width 10px
