--- a/views/styles/shared/menu_layouts.styl
+++ b/views/styles/shared/menu_layouts.styl
@@ -6,6 +6,8 @@ horiz_nav()
 	height 100%
 	list-style none
 	li 
+		margin 0
+		padding 0
 		display inline-block
 		
 
@@ -24,16 +26,18 @@ thumb_nav()
 	float left
 	list-style none
 	li 
-		margin 0
+		margin 0 5px 0 0
 		display block
 		float left
 		a
 			text-decoration none
+			font-family 'Franchise'
+			font-size 1.5em
 			display block
 			float left
 			border-style solid
 			border-width 24px
-			border-image: url("/assets/shared/border-08.png") 76 73 78 75 fill round;
+			border-image: url("/assets/shared/border-08.png") 77 fill round;
 			box-sizing border-box
 			color #999999
 			&:hover
