--- a/public/styles/website/about.css
+++ b/public/styles/website/about.css
@@ -458,7 +458,7 @@ header h6 ~ p {
   font-style: normal;
   font-weight: normal;
   src: url("/assets/shared/font/francise.eot");
-  src: url("franchise-bold-hinted-webfont.eot?#iefix") format('embedded-opentype'), url("franchise-bold-hinted-webfont.woff") format('woff'), url("franchise-bold-hinted-webfont.ttf") format('truetype'), url("franchise-bold-hinted-webfont.svg#franchiseregular") format('svg');
+  src: url("/assets/shared/font/franchise.eot?#iefix") format('embedded-opentype'), url("/assets/shared/font/franchise.woff") format('woff'), url("/assets/shared/font/franchise.ttf") format('truetype'), url("/assets/shared/font/franchise.svg#franchiseregular") format('svg');
 }
 h1 {
   margin: 0;
@@ -495,6 +495,114 @@ h6 {
   width: 100%;
   height: 100%;
 }
+/*
+	Page styles
+*/
+#page_header .login {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  list-style: none;
+  float: right;
+  color: #999;
+  border-style: solid;
+  border-width: 28px;
+  border-image: url("/assets/shared/border-02.png") 42 41 42 42 fill round;
+  box-sizing: border-box;
+}
+#page_header .login li {
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+}
+#page_header .login li {
+  margin: -10px auto;
+}
+#page_header .login input[type='text'] {
+  margin: 5px 0;
+  background: transparent none;
+  border-style: solid;
+  border-width: 10px;
+  border-image: url("/assets/shared/border-04.png") 71 69 69 72 fill stretch;
+  box-sizing: border-box;
+  color: #666;
+  text-decoration: none;
+  float: right;
+}
+#page_header .login input[type='text']:hover {
+  color: #999;
+  border-image: url("/assets/shared/border-08.png") 71 69 69 72 fill stretch;
+  transition: all 0.25s ease;
+  box-sizing: border-box;
+}
+#page_header .login input[type='checkbox'],
+#page_header .login label[for='chk_remember'] {
+  float: left;
+}
+#page_header .login input[type='checkbox'] {
+  margin-left: 15px;
+  clear: left;
+}
+#page_header .login label[for='chk_remember'] {
+  clear: right;
+}
+#page_header .login a {
+  font-family: 'Franchise';
+  font-size: 1.25em;
+  border-style: solid;
+  border-width: 10px;
+  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
+  box-sizing: border-box;
+  color: #333;
+  text-decoration: none;
+  float: left;
+}
+#page_header .login a:hover {
+  color: #999;
+  border-width: 10px;
+  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
+  transition: all 0.25s ease;
+}
+#page_section #page_nav ul.vert_nav {
+  padding: 0;
+  float: left;
+  height: 100%;
+  list-style: none;
+  overflow: visible;
+  border-style: solid;
+  border-width: 45px;
+  border-image: url("/assets/shared/border-01.png") 81 fill round;
+  box-sizing: border-box;
+}
+#page_section #page_nav ul.vert_nav li {
+  float: left;
+  clear: both;
+}
+#page_section #page_nav ul.vert_nav li {
+  width: 100%;
+}
+#page_section #page_nav ul.vert_nav li a {
+  font-family: 'Franchise';
+  font-size: 1.25em;
+  border-style: solid;
+  border-width: 10px;
+  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
+  box-sizing: border-box;
+  color: #333;
+  text-decoration: none;
+  float: left;
+  width: 100%;
+  font-family: 'Franchise';
+  font-size: 1.85em;
+  text-transform: uppercase;
+  text-align: center;
+}
+#page_section #page_nav ul.vert_nav li a:hover {
+  color: #999;
+  border-width: 10px;
+  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
+  transition: all 0.25s ease;
+}
 body {
   font-size: 75%;
 }
@@ -518,9 +626,13 @@ body {
   width: 100%;
   margin-left: 0%;
   margin-right: 3%;
+  padding: 1.5% 1.5%;
 }
 #page_header:last-child {
   margin-right: 0%;
+}
+#page_section {
+  padding: 0 1.5%;
 }
 #page_section #page_nav {
   float: left;
@@ -679,108 +791,6 @@ body {
     margin-right: 0%;
   }
 }
-/*
-	Page styles
-*/
-#page_header .login {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  list-style: none;
-  float: right;
-  color: #999;
-  border-style: solid;
-  border-width: 28px;
-  border-image: url("/assets/shared/border-02.png") 42 41 42 42 fill round;
-  box-sizing: border-box;
-}
-#page_header .login li {
-  display: inline-block;
-}
-#page_header .login li {
-  margin: -10px auto;
-}
-#page_header .login input[type='text'] {
-  background: transparent none;
-  border-style: solid;
-  border-width: 10px;
-  border-image: url("/assets/shared/border-04.png") 71 69 69 72 fill stretch;
-  box-sizing: border-box;
-  color: #666;
-  text-decoration: none;
-  float: right;
-}
-#page_header .login input[type='text']:hover {
-  color: #999;
-  border-image: url("/assets/shared/border-08.png") 71 69 69 72 fill stretch;
-  transition: all 0.25s ease;
-  box-sizing: border-box;
-}
-#page_header .login input[type='checkbox'],
-#page_header .login label[for='chk_remember'] {
-  float: left;
-}
-#page_header .login input[type='checkbox'] {
-  margin-left: 15px;
-  clear: left;
-}
-#page_header .login label[for='chk_remember'] {
-  clear: right;
-}
-#page_header .login a {
-  border-style: solid;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
-  box-sizing: border-box;
-  color: #333;
-  text-decoration: none;
-  float: left;
-}
-#page_header .login a:hover {
-  color: #999;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
-  transition: all 0.25s ease;
-}
-#page_section #page_nav ul.vert_nav {
-  padding: 0;
-  float: left;
-  height: 100%;
-  list-style: none;
-  overflow: visible;
-  border-style: solid;
-  border-width: 45px;
-  border-image: url("/assets/shared/border-01.png") 81 fill round;
-  box-sizing: border-box;
-  overflow: visible;
-}
-#page_section #page_nav ul.vert_nav li {
-  float: left;
-  clear: both;
-}
-#page_section #page_nav ul.vert_nav li {
-  margin: 0 0 0 -15px;
-  width: 100%;
-}
-#page_section #page_nav ul.vert_nav li a {
-  border-style: solid;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
-  box-sizing: border-box;
-  color: #333;
-  text-decoration: none;
-  float: left;
-  width: 100%;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-align: center;
-}
-#page_section #page_nav ul.vert_nav li a:hover {
-  color: #999;
-  border-width: 15px;
-  border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
-  transition: all 0.25s ease;
-}
 #page_section #page_content header {
   border-width: 28px;
   border-image: url("/assets/shared/border-03.png") 80 77 fill round;
@@ -794,8 +804,14 @@ body {
 #page_section #page_content section {
   border-style: solid;
   border-width: 28px;
-  border-image: url("/assets/shared/border-02.png") 42 41 42 42 fill round;
+  border-image: url("/assets/shared/border-02.png") 42 fill round;
   box-sizing: border-box;
+}
+#page_section #page_content section ul,
+#page_section #page_content section li,
+#page_section #page_content section a {
+  height: 50px;
+  display: inline-block;
 }
 #page_section #page_content section img {
   margin-right: 15px;
@@ -807,6 +823,8 @@ body {
   list-style: none;
 }
 #page_section #page_content section ul.horiz_nav li {
+  margin: 0;
+  padding: 0;
   display: inline-block;
 }
 #page_section #page_content footer ul.thumb_nav {
@@ -816,17 +834,19 @@ body {
   list-style: none;
 }
 #page_section #page_content footer ul.thumb_nav li {
-  margin: 0;
+  margin: 0 5px 0 0;
   display: block;
   float: left;
 }
 #page_section #page_content footer ul.thumb_nav li a {
   text-decoration: none;
+  font-family: 'Franchise';
+  font-size: 1.5em;
   display: block;
   float: left;
   border-style: solid;
   border-width: 24px;
-  border-image: url("/assets/shared/border-08.png") 76 73 78 75 fill round;
+  border-image: url("/assets/shared/border-08.png") 77 fill round;
   box-sizing: border-box;
   color: #999;
 }
@@ -838,6 +858,7 @@ body {
   border-width: 22px;
   border-image: url("/assets/shared/border-08.png") 80 77 fill round;
   box-sizing: border-box;
+  margin-bottom: 2.5%;
 }
 #page_section #page_sidebar article h3 a {
   text-decoration: none;
@@ -852,9 +873,6 @@ body {
 #page_section #page_sidebar article p {
   margin-top: -2.5px;
   color: #999;
-}
-#page_section #page_sidebar article img {
-  float: left;
 }
 /*
 	Layout Responsiveness
