--- a/public/styles/website/home.css
+++ b/public/styles/website/home.css
@@ -458,7 +458,7 @@ header h6 ~ p {
   font-style: normal;
   font-weight: normal;
   src: url("/assets/shared/font/francise.eot");
-  src: url("franchise-bold-hinted-webfont.eot?#iefix") format('embedded-opentype'), url("franchise-bold-hinted-webfont.woff") format('woff'), url("franchise-bold-hinted-webfont.ttf") format('truetype'), url("franchise-bold-hinted-webfont.svg#franchiseregular") format('svg');
+  src: url("/assets/shared/font/franchise.eot?#iefix") format('embedded-opentype'), url("/assets/shared/font/franchise.woff") format('woff'), url("/assets/shared/font/franchise.ttf") format('truetype'), url("/assets/shared/font/franchise.svg#franchiseregular") format('svg');
 }
 h1 {
   margin: 0;
@@ -495,6 +495,9 @@ h6 {
   width: 100%;
   height: 100%;
 }
+/*
+	Page styles
+*/
 #page_header .login {
   margin: 0;
   padding: 0;
@@ -508,12 +511,15 @@ h6 {
   box-sizing: border-box;
 }
 #page_header .login li {
+  margin: 0;
+  padding: 0;
   display: inline-block;
 }
 #page_header .login li {
   margin: -10px auto;
 }
 #page_header .login input[type='text'] {
+  margin: 5px 0;
   background: transparent none;
   border-style: solid;
   border-width: 10px;
@@ -541,8 +547,10 @@ h6 {
   clear: right;
 }
 #page_header .login a {
+  font-family: 'Franchise';
+  font-size: 1.25em;
   border-style: solid;
-  border-width: 15px;
+  border-width: 10px;
   border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
   box-sizing: border-box;
   color: #333;
@@ -551,7 +559,7 @@ h6 {
 }
 #page_header .login a:hover {
   color: #999;
-  border-width: 15px;
+  border-width: 10px;
   border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
   transition: all 0.25s ease;
 }
@@ -574,8 +582,10 @@ h6 {
   width: 100%;
 }
 #page_section #page_nav ul.vert_nav li a {
+  font-family: 'Franchise';
+  font-size: 1.25em;
   border-style: solid;
-  border-width: 15px;
+  border-width: 10px;
   border-image: url("/assets/shared/border-05.png") 71 69 69 72 fill stretch;
   box-sizing: border-box;
   color: #333;
@@ -589,7 +599,7 @@ h6 {
 }
 #page_section #page_nav ul.vert_nav li a:hover {
   color: #999;
-  border-width: 15px;
+  border-width: 10px;
   border-image: url("/assets/shared/border-07.png") 71 69 69 72 fill stretch;
   transition: all 0.25s ease;
 }
@@ -781,9 +791,6 @@ body {
     margin-right: 0%;
   }
 }
-/*
-	Page styles
-*/
 #page_section #page_content header {
   border-width: 28px;
   border-image: url("/assets/shared/border-03.png") 80 77 fill round;
@@ -797,8 +804,14 @@ body {
 #page_section #page_content section {
   border-style: solid;
   border-width: 28px;
-  border-image: url("/assets/shared/border-02.png") 42 41 42 42 fill round;
+  border-image: url("/assets/shared/border-02.png") 42 fill round;
   box-sizing: border-box;
+}
+#page_section #page_content section ul,
+#page_section #page_content section li,
+#page_section #page_content section a {
+  height: 50px;
+  display: inline-block;
 }
 #page_section #page_content section img {
   margin-right: 15px;
@@ -810,6 +823,8 @@ body {
   list-style: none;
 }
 #page_section #page_content section ul.horiz_nav li {
+  margin: 0;
+  padding: 0;
   display: inline-block;
 }
 #page_section #page_content footer ul.thumb_nav {
@@ -819,17 +834,19 @@ body {
   list-style: none;
 }
 #page_section #page_content footer ul.thumb_nav li {
-  margin: 0;
+  margin: 0 5px 0 0;
   display: block;
   float: left;
 }
 #page_section #page_content footer ul.thumb_nav li a {
   text-decoration: none;
+  font-family: 'Franchise';
+  font-size: 1.5em;
   display: block;
   float: left;
   border-style: solid;
   border-width: 24px;
-  border-image: url("/assets/shared/border-08.png") 76 73 78 75 fill round;
+  border-image: url("/assets/shared/border-08.png") 77 fill round;
   box-sizing: border-box;
   color: #999;
 }
