--- a/views/styles/shared/panels.styl
+++ b/views/styles/shared/panels.styl
@@ -13,8 +13,11 @@ featured_content_panel()
 featured_content_scroller_panel()
 	border-style solid
 	border-width 28px
-	border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
+	border-image url("/assets/shared/border-02.png") 42 fill round
 	box-sizing border-box
+	ul, li, a
+		height 50px
+		display inline-block
 	img
 		margin-right 15px
 
