- Lots of file re-organizing etc. - Created copies of current water shaders called "waterHD", in reference   to their insane hardware requirements :P - Tried copying current web deployed water shader, but things have changed   too much :P - Going to strip out noise functions and feed in texture, based on old   methods way of doing a uvNoiseGenerator to simulate noise - On the plus side, this may allow me to get back to having vertex   displacement, but we'll see :P It's pretty harsh atm due to the massive   scale so it probably won't work out

--- a/public/styles/game/ui.css
+++ b/public/styles/game/ui.css
@@ -432,7 +432,7 @@ header h6 ~ p {
 }
 /**************************************************************
 	Langenium UI Styles
-	Author: Paul Brzeski
+	Author Paul Brzeski
 **************************************************************/
 .dialog {
   color: #fff;
@@ -440,7 +440,7 @@ header h6 ~ p {
   opacity: 0.8;
   z-index: 10;
   position: absolute;
-  height: auto;
+heightauto
   padding: 1em;
   margin: 0.5em;
   font: 10px Verdana;
