--- a/styles/game/ui.styl
+++ b/styles/game/ui.styl
@@ -38,7 +38,9 @@
 	float left
 
 #transform .controls > .slider-control 
-	width70% floatleft margin15px
+	width 70% 
+	float left 
+	margin 15px
 
 
 #ui 
