Water looks nice enough, ocean is appealing. Moving onto making clouds texture based

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -42,6 +42,10 @@ script(type='x-shader/x-vertex', id='water_vertexShader')
 	include shaders/water.vertexShader
 script(type='x-shader/x-fragment', id='water_fragmentShader')
 	include shaders/water.fragmentShader
+script(type='x-shader/x-vertex', id='waterHD_vertexShader')
+	include shaders/waterHD.vertexShader
+script(type='x-shader/x-fragment', id='waterHD_fragmentShader')
+	include shaders/waterHD.fragmentShader
 script(type='text/javascript').
 	/*\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 		Globals
