Got texturing working properly in webgl-test5

--- a/views/game/header.jade
+++ b/views/game/header.jade
@@ -33,6 +33,7 @@ script(src='/scripts/game/scenes.js')
 script(src='/scripts/game/scenes/grid.js')
 script(src='/scripts/game/scenes/rooms.js')
 script(src='/scripts/game/textures.js')
+script(src='/scripts/game/textures/procedural.js')
 script(src='/scripts/game/textures/sprites.js')
 script(type='x-shader/x-vertex', id='cloud_vertexShader')
 	include shaders/cloud.vertexShader
