--- a/styles/shared/forms.styl
+++ b/styles/shared/forms.styl
@@ -36,3 +36,6 @@ textbox_hover()
 	border-image url("/assets/shared/border-08.png") 71 69 69 72 fill stretch
 	transition all 0.25s ease
 	box-sizing border-box
+
+checkbox()
+	background-color #000000
