--- a/styles/shared/menu_styles.styl
+++ b/styles/shared/menu_styles.styl
@@ -1,16 +1,15 @@
 // Menu Styles
 
 main_menu()
-	overflow visible
-	border-style solid
-	border-width 45px
-	border-image url("/assets/shared/border-01.png") 81 fill round
-	box-sizing border-box
+	padding-top 1em
+	padding-left 4em
+	float left
 	li 
-		width 100%
+		float left
 	li a			
 		button()
-		width 100%
+		margin .5em .25em
+		padding .35em .5em
 		font-family 'Franchise'
 		font-size 1.85em
 		text-transform uppercase
