--- a/styles/website/layouts/defaults.styl
+++ b/styles/website/layouts/defaults.styl
@@ -2,24 +2,31 @@
 	horiz_nav()
 	float right
 	color #999999
-	border-style solid
-	border-width 28px
-	border-image url("/assets/shared/border-02.png") 42 41 42 42 fill round
-	box-sizing border-box
 	li
-		margin -10px auto
+		margin 10px 5px 10px auto
+		float left
 	input[type='text']
 		textbox()
 		float right
 	input[type='checkbox'], label[for='chk_remember']
 		float left
 	input[type='checkbox']
-		margin-left 15px
+		margin-left 5px
+		margin-top 10px
+		margin-bottom -10px
 		clear left
 	label[for='chk_remember']
+		margin-top 3.5px
+		margin-bottom -10px
+		padding-left 2.5px
 		clear right
+		font-family 'Franchise'
+		font-size 1.2em
+	li:last-child
+		margin 10px 0 0 0
 	a
 		button()
+		
 
 #page_section #page_nav ul.vert_nav
 	vert_nav()
