--- a/views/index.jade
+++ b/views/index.jade
@@ -11,4 +11,4 @@ html
 					include website/about
 			include footer
 		#bg
-			img(src='/assets/shared/test_bg.png',class='stretch',alt='')
+			img(src='/assets/shared/space_bg.png',class='stretch',alt='')
