--- a/views/website/home.jade
+++ b/views/website/home.jade
@@ -1,6 +1,5 @@
 include layouts/page_header
 section#page_section
-	include layouts/main_menu
 	article#page_content
 		header
 			h2 Some header text
@@ -42,31 +41,36 @@ section#page_section
 				h3 
 					a(href='#') A News Headling of Some Sort
 				.thumb
-					img.stretch(src='/assets/shared/logo.png',width='138',height='95')
+					a(href='#')
+						img.stretch(src='/assets/shared/logo.png',width='138',height='95')
 				p Pig jerky pastrami ribeye fatback rump. Pork loin short loin turkey sausage drumstick pork belly strip steak pancetta. Pork belly ribeye bresaola short loin beef ribs salami t-bone tongue cow meatloaf capicola sausage leberkas.
 			article
 				h3 
 					a(href='#') Another News Headline
 				.thumb
-					img.stretch(src='/assets/shared/featured.png',width='138',height='95')
+					a(href='#')
+						img.stretch(src='/assets/shared/featured.png',width='138',height='95')
 				p Prosciutto chicken leberkas pastrami short loin turkey venison tongue. Andouille meatball sausage, shank turkey ball tip jerky cow short loin bacon. Strip steak pork chop capicola shankle chuck, chicken rump.
 			article
 				h3 
 					a(href='#') A News Headling of Some Sort
 				.thumb
-					img.stretch(src='/assets/shared/logo.png',width='138',height='95')
+					a(href='#')
+						img.stretch(src='/assets/shared/logo.png',width='138',height='95')
 				p Turkey beef kielbasa chicken bacon bresaola filet mignon leberkas jowl hamburger. Sirloin chuck capicola, bresaola t-bone chicken pancetta boudin shank ball tip hamburger meatball tail meatloaf beef ribs. T-bone biltong beef ribs shoulder meatball tenderloin short loin, fatback kevin jerky doner.
 			article
 				h3 
 					a(href='#') A News Headling of Some Sort
 				.thumb
-					img.stretch(src='/assets/shared/featured.png',width='138',height='95')
+					a(href='#')
+						img.stretch(src='/assets/shared/featured.png',width='138',height='95')
 				p Turducken frankfurter venison corned beef meatloaf, chicken drumstick sirloin strip steak. Filet mignon shank meatball brisket. Spare ribs tenderloin pork belly capicola, chicken ribeye venison. Jerky corned beef swine, meatloaf t-bone pastrami chuck fatback.
 			article
 				h3 
 					a(href='#') A News Headling of Some Sort
 				.thumb
-					img.stretch(src='/assets/shared/logo.png',width='138',height='95')
+					a(href='#')
+						img.stretch(src='/assets/shared/logo.png',width='138',height='95')
 				p PSpare ribs tenderloin pork belly capicola, chicken ribeye venison. Jerky corned beef swine, meatloaf t-bone pastrami chuck fatback.  Boudin leberkas tail hamburger pig tenderloin ribeye salami.
 		footer
 			a(href='#') + Load more
