Adding new files

--- a/views/website/layouts/page_header.jade
+++ b/views/website/layouts/page_header.jade
@@ -9,11 +9,13 @@ header#page_header
 			li 
 				a(href='/about') About
 			li 
-				a(href='/blog') Blog
+				a(href='/journal') journal
 			li
-				a(href='/gallery') Media
+				a(href='/media') Media
 			li 
-				a(href='/guide') Guide
+				a(href='/code') Code
+			li 
+				a(href='/universe') Universe
 		ul.login
 			li
 				input(type='text',val='Username')
