Trying to get the damn gulp/browserify integration to work!

--- a/views/index.jade
+++ b/views/index.jade
@@ -23,4 +23,4 @@ html
 			li {{item}}
 			{{/each}}
 
-	script(data-main="scripts/client", src="scripts/libs/require.js")
+	script(src="js/client-libs.js")
