Got basic solar system scene up and running - USING COMMONJS style logic that would work on the server.
This browserify stuff is muchos sexy indeed.

--- a/views/templates/layout.jade
+++ b/views/templates/layout.jade
@@ -1,9 +1,9 @@
 script(type="text/x-handlebars")
 		nav
 			h1
-				{{#link-to 'index'}}Home{{/link-to}}
-			{{#link-to 'games'}}Games{{/link-to}}
-			{{#link-to 'about'}}About{{/link-to}}
-			{{#link-to 'blog'}}Blog{{/link-to}}
-			{{#link-to 'media'}}Media{{/link-to}}
+				| {{#link-to 'index'}}Home{{/link-to}}
+			| {{#link-to 'games'}}Games{{/link-to}}
+			| {{#link-to 'about'}}About{{/link-to}}
+			| {{#link-to 'blog'}}Blog{{/link-to}}
+			| {{#link-to 'media'}}Media{{/link-to}}
 		| {{outlet}}
