--- a/views/templates/pages/about.jade
+++ b/views/templates/pages/about.jade
@@ -1,6 +1,6 @@
 script(type="text/x-handlebars", id="about")
 	h2 About
 	ul
-		{{#each item in model}}
+		| {{#each item in model}}
 		li {{item}}
-		{{/each}}
+		| {{/each}}
