--- a/views/templates/pages/index.jade
+++ b/views/templates/pages/index.jade
@@ -1,6 +1,6 @@
 script(type="text/x-handlebars", id="index")
-		h2 Home
-		ul
-			{{#each item in model}}
-			li {{item}}
-			{{/each}}
+	h2 Home
+	ul
+		| {{#each item in model}}
+		li {{item}}
+		| {{/each}}
